[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/entities/AbstractEntities/Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ai/Miner/Miner.gd" type="Script" id=2]
[ext_resource path="res://resources/Objects/Ships/mineman_angry.png" type="Texture" id=3]
[ext_resource path="res://resources/Objects/Ships/mineman_chill.png" type="Texture" id=4]
[ext_resource path="res://resources/Sound/miner_beeper.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 800.0

[sub_resource type="CircleShape2D" id=4]
radius = 1200.0

[sub_resource type="CircleShape2D" id=5]
radius = 36.0

[node name="Miner" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 7
sleeping = true
script = ExtResource( 2 )
ShipMaxHealth = 1
ShipCurrentHealth = 1
SpeedGreenZoneMultiplier = 1.0

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="DifferenceRecalculationTimer" type="Timer" parent="Timers" index="2"]
process_mode = 0
wait_time = 0.2

[node name="SeesPlayerTimer" type="Timer" parent="Timers" index="3"]
process_mode = 0
wait_time = 0.5
autostart = true

[node name="AngryfyingTimer" type="Timer" parent="Timers" index="4"]
process_mode = 0
wait_time = 0.9
one_shot = true

[node name="AngryfyingBlinkTimer" type="Timer" parent="Timers" index="5"]
wait_time = 0.07

[node name="PlayerSeenTimeout" type="Timer" parent="Timers" index="6"]
process_mode = 0
wait_time = 0.3

[node name="Sprite" type="AnimatedSprite" parent="." index="3"]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
frame = 1

[node name="AreaEnter" type="Area2D" parent="." index="4"]
input_pickable = false
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaEnter" index="0"]
modulate = Color( 1, 0.317647, 0.317647, 1 )
shape = SubResource( 3 )

[node name="AreaExit" type="Area2D" parent="." index="5"]
visible = false
input_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaExit" index="0"]
shape = SubResource( 4 )

[node name="ExplodeArea" type="Area2D" parent="." index="6"]
visible = false
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplodeArea" index="0"]
shape = SubResource( 5 )

[node name="BeeperSound" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource( 5 )
volume_db = 6.0
bus = "Sfx"
[connection signal="timeout" from="Timers/DifferenceRecalculationTimer" to="." method="_on_DifferenceRecalculationTimer_timeout"]
[connection signal="timeout" from="Timers/SeesPlayerTimer" to="." method="_on_SeesPlayerTimer_timeout"]
[connection signal="timeout" from="Timers/AngryfyingBlinkTimer" to="." method="_on_AngryfyingBlinkTimer_timeout"]
[connection signal="timeout" from="Timers/PlayerSeenTimeout" to="." method="_on_PlayerSeenTimeout_timeout"]
[connection signal="body_entered" from="AreaEnter" to="." method="_on_AreaEnter_body_entered"]
[connection signal="body_exited" from="AreaExit" to="." method="_on_AreaExit_body_exited"]
[connection signal="body_entered" from="ExplodeArea" to="." method="_on_ExplodeArea_body_entered"]
